Fixed background covering ui css

--- a/resources/public/scss/index.scss
+++ b/resources/public/scss/index.scss
@@ -1,12 +1,5 @@
 @import 'fonts';
-
-$purple: rgb(61,67,103);
-html, body {
-    background-color: $purple;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-}
-
+$purple: rgb(61, 67, 103);
 @mixin logo-font {
     font-family: 'Myriad Set Pro';
     font-weight: bold;
@@ -18,6 +11,14 @@ html, body {
     flex-direction: column;
     align-items: center;
 }
+
+html,
+body {
+    background-color: $purple;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .banner-svg-background {
     bottom: 0;
     left: 0;
@@ -25,67 +26,84 @@ html, body {
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 1; 
-svg {
-    transform: scale(1.5);
-    position: absolute;
-    bottom: 0px;
-    bottom: 15%;
-    right: 250px;
+    z-index: -1;
+    svg {
+        transform: scale(1.5);
+        position: absolute;
+        bottom: 0px;
+        bottom: 15%;
+        right: 250px;
+    }
 }
-}
+
 @media (max-width: 1000px) {
     svg {
         bottom: 10%;
     }
- }
+}
 
- @media (max-width: 1000px) {
+@media (max-width: 1000px) {
     svg {
-       display: none;
+        display: none;
     }
- }
+}
 
+#wave-one {
+    -webkit-animation: wave-one 10s linear infinite;
+    animation: wave-one 10s linear infinite;
+}
 
+#wave-two {
+    -webkit-animation: wave-two 15s linear infinite;
+    animation: wave-two 15s linear infinite;
+}
 
-    #wave-one {
-        -webkit-animation: wave-one 10s linear infinite;
-                animation: wave-one 10s linear infinite; }
-      
-      #wave-two {
-        -webkit-animation: wave-two 15s linear infinite;
-                animation: wave-two 15s linear infinite; }
-      
-      @-webkit-keyframes wave-one {
-        from {
-          -webkit-transform: rotate(0deg) translateX(5px) rotate(0deg);
-                  transform: rotate(0deg) translateX(5px) rotate(0deg); }
-        to {
-          -webkit-transform: rotate(360deg) translateX(5px) rotate(-360deg);
-                  transform: rotate(360deg) translateX(5px) rotate(-360deg); } }
-      
-      @keyframes wave-one {
-        from {
-          -webkit-transform: rotate(0deg) translateX(5px) rotate(0deg);
-                  transform: rotate(0deg) translateX(5px) rotate(0deg); }
-        to {
-          -webkit-transform: rotate(360deg) translateX(5px) rotate(-360deg);
-                  transform: rotate(360deg) translateX(5px) rotate(-360deg); } }
-      @-webkit-keyframes wave-two {
-        from {
-          -webkit-transform: rotate(0deg) translateX(8px) rotate(0deg);
-                  transform: rotate(0deg) translateX(8px) rotate(0deg); }
-        to {
-          -webkit-transform: rotate(360deg) translateX(8px) rotate(-360deg);
-                  transform: rotate(360deg) translateX(8px) rotate(-360deg); } }
-      @keyframes wave-two {
-        from {
-          -webkit-transform: rotate(0deg) translateX(8px) rotate(0deg);
-                  transform: rotate(0deg) translateX(8px) rotate(0deg); }
-        to {
-          -webkit-transform: rotate(360deg) translateX(8px) rotate(-360deg);
-                  transform: rotate(360deg) translateX(8px) rotate(-360deg); } }
+@-webkit-keyframes wave-one {
+    from {
+        -webkit-transform: rotate(0deg) translateX(5px) rotate(0deg);
+        transform: rotate(0deg) translateX(5px) rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg) translateX(5px) rotate(-360deg);
+        transform: rotate(360deg) translateX(5px) rotate(-360deg);
+    }
+}
+
+@keyframes wave-one {
+    from {
+        -webkit-transform: rotate(0deg) translateX(5px) rotate(0deg);
+        transform: rotate(0deg) translateX(5px) rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg) translateX(5px) rotate(-360deg);
+        transform: rotate(360deg) translateX(5px) rotate(-360deg);
+    }
+}
+
+@-webkit-keyframes wave-two {
+    from {
+        -webkit-transform: rotate(0deg) translateX(8px) rotate(0deg);
+        transform: rotate(0deg) translateX(8px) rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg) translateX(8px) rotate(-360deg);
+        transform: rotate(360deg) translateX(8px) rotate(-360deg);
+    }
+}
+
+@keyframes wave-two {
+    from {
+        -webkit-transform: rotate(0deg) translateX(8px) rotate(0deg);
+        transform: rotate(0deg) translateX(8px) rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg) translateX(8px) rotate(-360deg);
+        transform: rotate(360deg) translateX(8px) rotate(-360deg);
+    }
+}
+
 div#app {
+    z-index: 1;
     @include flex-center();
     .welcome {
         @include flex-center();
@@ -103,7 +121,6 @@ div#app {
         }
         span {
             font-size: 20px;
-
         }
     }
 }
